--- a/client/package.json
+++ b/client/package.json
@@ -12,23 +12,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.0.2",
-    "@angular/compiler": "^2.0.2",
-    "@angular/core": "^2.0.2",
-    "@angular/forms": "~2.0.0",
-    "@angular/http": "~2.0.0",
-    "@angular/platform-browser": "^2.0.2",
-    "@angular/platform-browser-dynamic": "^2.0.2",
-    "@angular/router": "~3.0.0",
+    "@angular/common": "^2.3.0",
+    "@angular/compiler": "^2.3.0",
+    "@angular/core": "^2.3.0",
+    "@angular/forms": "^2.0.2",
+    "@angular/http": "^2.0.2",
+    "@angular/platform-browser": "^2.3.0",
+    "@angular/platform-browser-dynamic": "^2.3.0",
+    "@angular/router": "^3.0.2",
     "core-js": "^2.4.1",
-    "rxjs": "^5.0.0-beta.6",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "rxjs": "^5.0.0-rc.5",
+    "ts-helpers": "^1.1.2",
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.17",
+    "angular-cli": "^1.0.0-beta.22-1",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
