--- a/server/build.gradle
+++ b/server/build.gradle
@@ -50,5 +50,5 @@ dependencies {
 	compile('com.fasterxml.jackson.core:jackson-databind:' + jacksonVersion)
 	compile('io.jsonwebtoken:jjwt:' + jjwtVersion)
 	
-	//testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
