--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-security.basic.enabled=false
+
 spring.session.store-type=none
 
 # DATASOURCE
@@ -8,3 +8,9 @@ spring.datasource.name=test
 spring.datasource.username=sa
 spring.datasource.password=Fill4Life!
 spring.datasource.hikari.initialization-fail-fast=false
+
+# SECURITY
+security.basic.enabled=false
+security.auth.login-path=/login
+security.auth.jwt.secret=secret
+security.auth.jwt.expiration-time=120000 
