--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.session.store-type=none
 # DATASOURCE
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDataSource
 spring.datasource.url=landfilldb.cenej03vevto.us-west-2.rds.amazonaws.com
-spring.datasource.name=test
+#spring.datasource.name=test
 spring.datasource.username=sa
 spring.datasource.password=Fill4Life!
 spring.datasource.hikari.initialization-fail-fast=false
