--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.2.3",
-    "@angular/compiler": "2.2.3",
-    "@angular/core": "2.2.3",
+    "@angular/common": "2.4.3",
+    "@angular/compiler": "2.4.3",
+    "@angular/core": "2.4.3",
     "@angular/flex-layout": "^2.0.0-beta.1",
-    "@angular/forms": "2.2.3",
-    "@angular/http": "2.2.3",
+    "@angular/forms": "2.4.3",
+    "@angular/http": "2.4.3",
     "@angular/material": "^2.0.0-beta.1",
-    "@angular/platform-browser": "2.2.3",
-    "@angular/platform-browser-dynamic": "2.2.3",
+    "@angular/platform-browser": "2.4.3",
+    "@angular/platform-browser-dynamic": "2.4.3",
     "@angular/router": "3.2.3",
     "angular2-jwt": "^0.1.27",
     "core-js": "^2.4.1",
@@ -29,10 +29,10 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.2.3",
+    "@angular/compiler-cli": "2.4.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.22-1",
+    "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
