instantaneous upload wip

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,3 +14,6 @@ security.basic.enabled=false
 security.auth.login-path=/login
 security.auth.jwt.secret=secret
 security.auth.jwt.expiration-time=120000 
+
+# FILE UPLOAD
+spring.http.multipart.max-file-size=10MB
