--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,8 +3,8 @@ buildscript {
 		springBootVersion = '1.4.2.RELEASE'
 	}
 	repositories {
-		mavenCentral()
-	}
+		jcenter()
+   }
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
@@ -27,8 +27,6 @@ repositories {
 
 ext {
 	springVersion = ''
-	springSecurityVersion = '4.1.3.RELEASE'
-	//oauth2Version = '2.0.12.RELEASE'
 	hibernateVersion = '5.0.1.Final'
 	jacksonVersion = '2.8.4'
 	jjwtVersion = '0.7.0'
@@ -39,7 +37,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.security:spring-security-web:' + springSecurityVersion)
 	compile('org.springframework.security:spring-security-config:' + springSecurityVersion)
-	//compile('org.springframework.security.oauth:spring-security-oauth2:' + oauth2Version)
 	compile('org.springframework.session:spring-session')
 	compile('org.springframework:spring-core')
 	compile('org.springframework:spring-web')
@@ -52,5 +49,5 @@ dependencies {
 	compile('io.jsonwebtoken:jjwt:' + jjwtVersion)
 	compile('org.aspectj:aspectjweaver:' + aspectjVersion)
 	
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile files('bin/sqljdbc42.jar')
 }
