changed server port number to 5000

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-
 spring.session.store-type=none
+server.port=5000
 
 # DATASOURCE
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDataSource
