--- a/server/build.gradle
+++ b/server/build.gradle
@@ -14,6 +14,13 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
+apply plugin: 'war'
+
+war {
+    baseName = 'myapp'
+    version =  '0.5.0'
+}
+
 jar {
 	baseName = 'server'
 	version = '0.0.5-SNAPSHOT'
@@ -23,6 +30,7 @@ targetCompatibility = 1.8
 
 repositories {
 	jcenter()
+	maven { url "http://repo.spring.io/libs-snapshot" }
 }
 
 ext {
@@ -34,6 +42,11 @@ ext {
 }
 
 dependencies {
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	
+	compile("org.springframework.boot:spring-boot-starter-web")
+	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
+	
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.security:spring-security-web:' + springSecurityVersion)
 	compile('org.springframework.security:spring-security-config:' + springSecurityVersion)
@@ -51,3 +64,4 @@ dependencies {
 	
 	compile files('lib/sqljdbc42.jar')
 }
+
