--- a/server/build.gradle
+++ b/server/build.gradle
@@ -4,9 +4,9 @@ buildscript {
 	}
 	repositories {
 		jcenter()
-   }
+	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath('org.springframework.boot:spring-boot-gradle-plugin:' + springBootVersion)
 	}
 }
 
@@ -14,23 +14,25 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
-apply plugin: 'war'
-
-war {
-    baseName = 'myapp'
-    version =  '0.5.0'
-}
-
 jar {
 	baseName = 'server'
 	version = '0.0.5-SNAPSHOT'
 }
+
+// Uncomment the following lines to build project as WAR instead of JAR.
+/*
+apply plugin: 'war'
+war {
+	baseName = 'server'
+	version = '0.0.5-SNAPSHOT'
+}
+*/
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
 	jcenter()
-	maven { url "http://repo.spring.io/libs-snapshot" }
 }
 
 ext {
@@ -42,11 +44,6 @@ ext {
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	
-	compile("org.springframework.boot:spring-boot-starter-web")
-	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
-	
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile('org.springframework.security:spring-security-web:' + springSecurityVersion)
 	compile('org.springframework.security:spring-security-config:' + springSecurityVersion)
@@ -63,5 +60,8 @@ dependencies {
 	compile('org.aspectj:aspectjweaver:' + aspectjVersion)
 	
 	compile files('lib/sqljdbc42.jar')
+	
+	// Uncomment the following line to build project for Tomcat (?).
+	// providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 }
 
