--- a/server/build.gradle
+++ b/server/build.gradle
@@ -36,7 +36,9 @@ repositories {
 }
 
 ext {
+	springVersion = '4.3.7.RELEASE'
 	springSecurityVersion = '4.1.3.RELEASE'
+	springBootVersion = '1.4.2.RELEASE'
 	hibernateVersion = '5.0.1.Final'
 	jacksonVersion = '2.8.4'
 	jjwtVersion = '0.7.0'
@@ -44,14 +46,13 @@ ext {
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-rest')
+	compile('org.springframework.boot:spring-boot-starter-data-rest:' + springBootVersion)
 	compile('org.springframework.security:spring-security-web:' + springSecurityVersion)
 	compile('org.springframework.security:spring-security-config:' + springSecurityVersion)
-	compile('org.springframework.session:spring-session')
-	compile('org.springframework:spring-core')
-	compile('org.springframework:spring-web')
-	compile('org.springframework:spring-tx')
-	compile('org.springframework:spring-orm')
+	compile('org.springframework:spring-core:' + springVersion)
+	compile('org.springframework:spring-web:' + springVersion)
+	compile('org.springframework:spring-tx:' + springVersion)
+	compile('org.springframework:spring-orm:' + springVersion)
 	compile('org.hibernate:hibernate-core:' + hibernateVersion)
 	compile('org.hibernate:hibernate-entitymanager:' + hibernateVersion)
 	compile('org.hibernate:hibernate-hikaricp:' + hibernateVersion)
