--- a/server/build.gradle
+++ b/server/build.gradle
@@ -40,7 +40,7 @@ ext {
 	springSecurityVersion = '4.1.3.RELEASE'
 	springBootVersion = '1.4.2.RELEASE'
 	hibernateVersion = '5.0.1.Final'
-	jacksonVersion = '2.8.4'
+	jacksonVersion = '2.8.7'
 	jjwtVersion = '0.7.0'
 	aspectjVersion = '1.8.9'
 }
@@ -57,6 +57,7 @@ dependencies {
 	compile('org.hibernate:hibernate-entitymanager:' + hibernateVersion)
 	compile('org.hibernate:hibernate-hikaricp:' + hibernateVersion)
 	compile('com.fasterxml.jackson.core:jackson-databind:' + jacksonVersion)
+	compile('com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:' + jacksonVersion)
 	compile('io.jsonwebtoken:jjwt:' + jjwtVersion)
 	compile('org.aspectj:aspectjweaver:' + aspectjVersion)
 	
