moved email config to application.properties

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,3 +13,11 @@ security.basic.enabled=false
 
 # FILE UPLOAD
 spring.http.multipart.max-file-size=10MB
+
+# EMAIL
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.smtp.host=smtp.gmail.com
+mail.smtp.port=587
+mail.smtp.username=landfill.notifications@gmail.com
+mail.smtp.password=emailtest
