--- a/server/build.gradle
+++ b/server/build.gradle
@@ -43,6 +43,7 @@ ext {
 	jacksonVersion = '2.8.7'
 	jjwtVersion = '0.7.0'
 	aspectjVersion = '1.8.9'
+	poiVersion = '3.16-beta2'
 	pdfboxVersion = '2.0.5'
 	javaxMailVersion = '1.5.6'
 }
@@ -62,6 +63,8 @@ dependencies {
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:' + jacksonVersion)
 	compile('io.jsonwebtoken:jjwt:' + jjwtVersion)
 	compile('org.aspectj:aspectjweaver:' + aspectjVersion)
+	compile('org.apache.poi:poi:' + poiVersion)
+	compile('org.apache.poi:poi-ooxml:' + poiVersion)
 	compile('org.apache.pdfbox:pdfbox:' + pdfboxVersion)
 	compile('com.sun.mail:javax.mail:' + javaxMailVersion)
 	
