--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.url=landfilldb.cenej03vevto.us-west-2.rds.amazonaws.com
 spring.datasource.username=sa
 spring.datasource.password=Fill4Life!
 spring.datasource.hikari.initialization-fail-fast=false
+spring.datasource.name=test
 
 # SECURITY
 security.basic.enabled=false
