--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "angular2-jwt": "^0.1.28",
     "codelyzer": "^2.0.0",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
     "karma-remap-istanbul": "^0.2.2",
     "rxjs": "^5.1.0",
     "tslint": "^4.5.1",
