--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "build-electron": "ng build --base-href . && copy src\\electron\\* dist",
+    "electron": "npm run build-electron && electron dist"
   },
   "private": true,
   "dependencies": {
