--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.4.2.RELEASE'
+		springBootVersion = '1.4.7.RELEASE'
 	}
 	repositories {
 		jcenter()
@@ -16,7 +16,7 @@ apply plugin: 'org.springframework.boot'
 
 jar {
 	baseName = 'server'
-	version = '0.5.5'
+	version = '0.5.6'
 }
 
 // Uncomment the following lines to build project as WAR instead of JAR.
@@ -24,7 +24,7 @@ jar {
 apply plugin: 'war'
 war {
 	baseName = 'server'
-	version = '0.5.5'
+	version = '0.5.6'
 }
 */
 
@@ -36,33 +36,61 @@ repositories {
 }
 
 ext {
-	springVersion = '4.3.7.RELEASE'
-	springSecurityVersion = '4.1.3.RELEASE'
-	springBootVersion = '1.4.2.RELEASE'
-	hibernateVersion = '5.0.1.Final'
-	jacksonVersion = '2.8.7'
+	springVersion = '4.3.10.RELEASE'
+	springSecurityVersion = '4.1.4.RELEASE'
+	springBootVersion = '1.4.7.RELEASE'
+	hibernateVersion = '5.2.4.Final'
+	jacksonVersion = '2.8.9'
 	jjwtVersion = '0.7.0'
 	aspectjVersion = '1.8.9'
 	javaxMailVersion = '1.5.6'
 	commonsIoVersion = '2.5'
-	poiVersion = '3.16-beta2'
+	poiVersion = '3.17-beta1'
 	pdfboxVersion = '2.0.5'
 	boxableVersion = '1.5-RC'
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-rest:' + springBootVersion)
+
+	// Spring Boot
+	compile('org.springframework.boot:spring-boot:' + springBootVersion)
+	compile('org.springframework.boot:spring-boot-autoconfigure:' + springBootVersion)
+	compile('org.springframework.boot:spring-boot-starter:' + springBootVersion)
+	compile('org.springframework.boot:spring-boot-starter-logging:' + springBootVersion)
+	compile('org.springframework.boot:spring-boot-starter-tomcat:' + springBootVersion)
+	compile('org.springframework.boot:spring-boot-starter-web:' + springBootVersion)
+	
+	// Spring Components
+	compile('org.springframework:spring-core:' + springVersion)
+	compile('org.springframework:spring-aop:' + springVersion)
+	compile('org.springframework:spring-beans:' + springVersion)
+	compile('org.springframework:spring-context:' + springVersion)
+	compile('org.springframework:spring-expression:' + springVersion)
+	compile('org.springframework:spring-jdbc:' + springVersion) 
+	compile('org.springframework:spring-orm:' + springVersion) 
+	compile('org.springframework:spring-tx:' + springVersion)
+	compile('org.springframework:spring-web:' + springVersion)
+	compile('org.springframework:spring-webmvc:' + springVersion)
+	
+	// Spring Security
+	compile('org.springframework.security:spring-security-core:' + springSecurityVersion)
 	compile('org.springframework.security:spring-security-web:' + springSecurityVersion)
 	compile('org.springframework.security:spring-security-config:' + springSecurityVersion)
-	compile('org.springframework:spring-core:' + springVersion)
-	compile('org.springframework:spring-web:' + springVersion)
-	compile('org.springframework:spring-tx:' + springVersion)
-	compile('org.springframework:spring-orm:' + springVersion)
+	
+	
+	// Hibernate
 	compile('org.hibernate:hibernate-core:' + hibernateVersion)
 	compile('org.hibernate:hibernate-entitymanager:' + hibernateVersion)
 	compile('org.hibernate:hibernate-hikaricp:' + hibernateVersion)
+	compile('org.hibernate:hibernate-validator:' + hibernateVersion)
+	
+	// Jackson
+	compile('com.fasterxml.jackson.core:jackson-annotations:' + jacksonVersion)
+	compile('com.fasterxml.jackson.core:jackson-core:' + jacksonVersion)
 	compile('com.fasterxml.jackson.core:jackson-databind:' + jacksonVersion)
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:' + jacksonVersion)
+	
+	// Other	
 	compile('io.jsonwebtoken:jjwt:' + jjwtVersion)
 	compile('org.aspectj:aspectjweaver:' + aspectjVersion)
 	compile('commons-io:commons-io:' + commonsIoVersion)
