--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,25 +1,13 @@
+# DEFAULT PROFILE
+# The default profile is set to 'dev' for development purposes.
+# Use launch parameters or environment variables to override.
+spring.profiles.active=dev
+
 # SERVER
 spring.session.store-type=none
-server.port=5000
-
-# DATASOURCE
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDataSource
-spring.datasource.url=landfilldb.cenej03vevto.us-west-2.rds.amazonaws.com
-spring.datasource.username=sa
-spring.datasource.password=Fill4Life!
-spring.datasource.hikari.initialization-fail-fast=false
-spring.datasource.name=test
 
 # SECURITY
 security.basic.enabled=false
 
 # FILE UPLOAD
 spring.http.multipart.max-file-size=10MB
-
-# EMAIL
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
-mail.smtp.host=smtp.gmail.com
-mail.smtp.port=587
-mail.smtp.username=landfill.notifications@gmail.com
-mail.smtp.password=emailtest
