fix: changed server back to 'test'

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -11,7 +11,7 @@ spring.datasource.url=landfilldb.cenej03vevto.us-west-2.rds.amazonaws.com
 spring.datasource.username=sa
 spring.datasource.password=Fill4Life!
 spring.datasource.hikari.initialization-fail-fast=false
-spring.datasource.name=test2
+spring.datasource.name=test
 
 # EMAIL
 mail.smtp.auth=true
