updated db url for dev environment

--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ server.port=8080
 
 # DATASOURCE
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDataSource
-spring.datasource.url=landfilldb.cenej03vevto.us-west-2.rds.amazonaws.com
+spring.datasource.url=landfill-db.co8d5ivd9aq8.us-west-1.rds.amazonaws.com
 spring.datasource.username=sa
 spring.datasource.password=Fill4Life!
 spring.datasource.hikari.initialization-fail-fast=false
