updated dev server endpoint

--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # This is the 'dev' profile used for running development servers.
-# This profile should be used when running a local server.
+# This profile should be used when running a local or remote development server.
 #
 # If this is not the default profile, then add
 #		--spring.profiles.active=dev
@@ -7,11 +7,13 @@
 
 
 # SERVER
+# Port number should be 5000 if hosting remote dev server on AWS.
+# This can be configured through the settings for your Elastic Beanstalk instance.
 server.port=8080
 
 # DATASOURCE
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDataSource
-spring.datasource.url=landfill-db.co8d5ivd9aq8.us-west-1.rds.amazonaws.com
+spring.datasource.url=landfill-db.ccza04kpgfg3.us-west-1.rds.amazonaws.com
 spring.datasource.username=sa
 spring.datasource.password=Fill4Life!
 spring.datasource.hikari.initialization-fail-fast=false
