updated server env endpoits in client app

--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -3,7 +3,9 @@
 
 
 # SERVER
-server.port=5000
+# Port number should be 5000 if hosting remote dev server on AWS.
+# This can be configured through the settings for your Elastic Beanstalk instance.
+server.port=8080
 
 # DATASOURCE
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDataSource
